--- a/HomuraMachine/Mihara/Mihara.vcxproj
+++ b/HomuraMachine/Mihara/Mihara.vcxproj
@@ -66,6 +66,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\Common\XC32\clock.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\interrupt.cpp" />
     <ClCompile Include="Battery.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CO2.cpp" />
@@ -83,6 +85,19 @@
     <ClCompile Include="Thermo.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\Common\XC32\adc.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\clock.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\device.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\exceptions.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\i2c.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\interrupt.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\interrupt_safe_allocator.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\longtimer.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\pin.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\spi.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\timer.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\uart.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\wdt.hpp" />
     <ClInclude Include="..\..\..\Common\XCBase\allocator.hpp" />
     <ClInclude Include="..\..\..\Common\XCBase\array_queue.hpp" />
     <ClInclude Include="..\..\..\Common\XCBase\bytes.hpp" />
