Add reference to XC32/sfr files

--- a/HomuraMachine/Mihara/Mihara.vcxproj
+++ b/HomuraMachine/Mihara/Mihara.vcxproj
@@ -68,6 +68,31 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\Common\XC32\clock.cpp" />
     <ClCompile Include="..\..\..\Common\XC32\interrupt.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\i2c1.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\i2c2.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\i2c3.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\i2c4.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\i2c5.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\rtcc.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\spi1.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\spi2.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\spi3.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\spi4.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer1.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer2.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer3.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer4.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer5.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer6.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer7.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer8.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer9.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart1.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart2.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart3.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart4.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart5.cpp" />
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart6.cpp" />
     <ClCompile Include="Battery.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CO2.cpp" />
@@ -94,6 +119,42 @@
     <ClInclude Include="..\..\..\Common\XC32\interrupt_safe_allocator.hpp" />
     <ClInclude Include="..\..\..\Common\XC32\longtimer.hpp" />
     <ClInclude Include="..\..\..\Common\XC32\pin.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\adc1.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\adc_base.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\analog.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\exclusive_mixin.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\i2c1.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\i2c2.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\i2c3.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\i2c4.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\i2c5.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\interrupt.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\port.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\reset.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\rtcc.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\sfr_register_mixin.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\spi1.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\spi2.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\spi3.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\spi4.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer1.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer2.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer3.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer4.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer5.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer6.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer7.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer8.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer9.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer_base.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart1.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart2.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart3.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart4.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart5.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart6.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart_base.hpp" />
+    <ClInclude Include="..\..\..\Common\XC32\sfr\wdt.hpp" />
     <ClInclude Include="..\..\..\Common\XC32\spi.hpp" />
     <ClInclude Include="..\..\..\Common\XC32\timer.hpp" />
     <ClInclude Include="..\..\..\Common\XC32\uart.hpp" />
