--- a/HomuraMachine/Mihara/Mihara.vcxproj.filters
+++ b/HomuraMachine/Mihara/Mihara.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="Common\XC32">
       <UniqueIdentifier>{c9caf8bd-e5a6-4249-a05b-30c5705fd967}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Common\XC32\sfr">
+      <UniqueIdentifier>{8da1e083-3503-4427-a9af-d317ae47f8fb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Battery.cpp">
@@ -74,6 +77,81 @@
     </ClCompile>
     <ClCompile Include="..\..\..\Common\XC32\interrupt.cpp">
       <Filter>Common\XC32</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\i2c1.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\i2c2.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\i2c3.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\i2c4.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\i2c5.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\rtcc.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\spi1.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\spi2.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\spi3.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\spi4.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer1.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer2.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer3.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer4.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer5.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer6.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer7.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer8.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\timer9.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart1.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart2.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart3.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart4.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart5.cpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Common\XC32\sfr\uart6.cpp">
+      <Filter>Common\XC32\sfr</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -223,6 +301,114 @@
     </ClInclude>
     <ClInclude Include="..\..\..\Common\XC32\wdt.hpp">
       <Filter>Common\XC32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\adc_base.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\adc1.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\analog.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\exclusive_mixin.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\i2c1.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\i2c2.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\i2c3.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\i2c4.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\i2c5.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\interrupt.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\port.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\reset.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\rtcc.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\sfr_register_mixin.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\spi1.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\spi2.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\spi3.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\spi4.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer_base.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer1.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer2.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer3.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer4.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer5.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer6.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer7.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer8.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\timer9.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart_base.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart1.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart2.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart3.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart4.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart5.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\uart6.hpp">
+      <Filter>Common\XC32\sfr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Common\XC32\sfr\wdt.hpp">
+      <Filter>Common\XC32\sfr</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
