--- a/HomuraMachine/Mihara/Mihara.vcxproj
+++ b/HomuraMachine/Mihara/Mihara.vcxproj
@@ -66,6 +66,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\hmLib\hmLib\cdeque.c" />
+    <ClCompile Include="..\..\hmLib\hmLib\comgate.cpp" />
+    <ClCompile Include="..\..\hmLib\hmLib\coordinates.cpp" />
+    <ClCompile Include="..\..\hmLib\hmLib\cqueue.c" />
+    <ClCompile Include="..\..\hmLib\hmLib\cstack.c" />
+    <ClCompile Include="..\..\hmLib\hmLib\cstring.c" />
+    <ClCompile Include="..\..\hmLib\hmLib\debugstream.cpp" />
+    <ClCompile Include="..\..\hmLib\hmLib\random.cpp" />
+    <ClCompile Include="..\..\homuraLib_v2\crc8.c" />
+    <ClCompile Include="..\..\XC32\clock.cpp" />
+    <ClCompile Include="..\..\XC32\interrupt.cpp" />
     <ClCompile Include="Battery.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CO2.cpp" />
@@ -83,19 +94,76 @@
     <ClCompile Include="Thermo.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\Common\XCBase\allocator.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\array_queue.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\bytes.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\constexpr_no.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\either.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\exceptions.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\function.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\future.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\lock.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\rvalue_reference.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\shared_bytes.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\type.hpp" />
-    <ClInclude Include="..\..\..\Common\XCBase\type_traits.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\algorithm.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\any_iterator.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\array_queue.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\bufgate.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\cdeque.h" />
+    <ClInclude Include="..\..\hmLib\hmLib\color.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\comgate.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\config_vc.h" />
+    <ClInclude Include="..\..\hmLib\hmLib\coordinates.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\cqueue.h" />
+    <ClInclude Include="..\..\hmLib\hmLib\cstack.h" />
+    <ClInclude Include="..\..\hmLib\hmLib\cstring.h" />
+    <ClInclude Include="..\..\hmLib\hmLib\date.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\debugstream.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\exceptions.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\filterbuf.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\gate.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\gps.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\inquiries.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\mutex_proxy.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\position.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\random.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\rectangle.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\signals.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\streambuf_interface.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\stream_utility.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\type.h" />
+    <ClInclude Include="..\..\hmLib\hmLib\typemanage.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\utility.hpp" />
+    <ClInclude Include="..\..\hmLib\hmLib\version.h" />
+    <ClInclude Include="..\..\homuraLib_v2\allocator.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\chrono.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\code.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\crc8.h" />
+    <ClInclude Include="..\..\homuraLib_v2\exceptions.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\gate.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\gate_adaptor.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\gps.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\io.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\message.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\raw_data.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\static_buffer_allocator.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\task.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\type.hpp" />
+    <ClInclude Include="..\..\XC32\adc.hpp" />
+    <ClInclude Include="..\..\XC32\clock.hpp" />
+    <ClInclude Include="..\..\XC32\device.hpp" />
+    <ClInclude Include="..\..\XC32\exceptions.hpp" />
+    <ClInclude Include="..\..\XC32\i2c.hpp" />
+    <ClInclude Include="..\..\XC32\interrupt.hpp" />
+    <ClInclude Include="..\..\XC32\interrupt_safe_allocator.hpp" />
+    <ClInclude Include="..\..\XC32\longtimer.hpp" />
+    <ClInclude Include="..\..\XC32\pin.hpp" />
+    <ClInclude Include="..\..\XC32\spi.hpp" />
+    <ClInclude Include="..\..\XC32\timer.hpp" />
+    <ClInclude Include="..\..\XC32\uart.hpp" />
+    <ClInclude Include="..\..\XC32\wdt.hpp" />
+    <ClInclude Include="..\..\XCBase\allocator.hpp" />
+    <ClInclude Include="..\..\XCBase\array_queue.hpp" />
+    <ClInclude Include="..\..\XCBase\bytes.hpp" />
+    <ClInclude Include="..\..\XCBase\constexpr_no.hpp" />
+    <ClInclude Include="..\..\XCBase\either.hpp" />
+    <ClInclude Include="..\..\XCBase\exceptions.hpp" />
+    <ClInclude Include="..\..\XCBase\function.hpp" />
+    <ClInclude Include="..\..\XCBase\future.hpp" />
+    <ClInclude Include="..\..\XCBase\lock.hpp" />
+    <ClInclude Include="..\..\XCBase\rvalue_reference.hpp" />
+    <ClInclude Include="..\..\XCBase\shared_bytes.hpp" />
+    <ClInclude Include="..\..\XCBase\type.hpp" />
+    <ClInclude Include="..\..\XCBase\type_traits.hpp" />
     <ClInclude Include="Battery.hpp" />
     <ClInclude Include="Camera.hpp" />
     <ClInclude Include="CO2.hpp" />
