change project files

--- a/HomuraMachine/Mihara/Mihara.vcxproj
+++ b/HomuraMachine/Mihara/Mihara.vcxproj
@@ -40,11 +40,11 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(USERPROFILE)\Documents\Projects\HomuraMachine;$(USERPROFILE)\Documents\Projects\HomuraMachine\hmLib;$(IncludePath)</IncludePath>
+    <IncludePath>$(USERPROFILE)\Documents\Projects\HomuraMachine;$(USERPROFILE)\Documents\Projects\HomuraMachine\hmLib;$(IncludePath);C:\Users\homura\Documents\Git\HomuraMachine;C:\Users\homura\Documents\Git\HomuraMachine\hmLib</IncludePath>
     <SourcePath>$(USERPROFILE)\Documents\Git\HomuraMachine;C:\Users\hmIto\Documents\Projects\HomuraMachine\hmLib;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(USERPROFILE)\Documents\Git\HomuraMachine;$(USERPROFILE)\Documents\Git\HomuraMachine\hmLib;$(IncludePath)</IncludePath>
+    <IncludePath>$(USERPROFILE)\Documents\Git\HomuraMachine;$(USERPROFILE)\Documents\Git\HomuraMachine\hmLib;$(IncludePath);C:\Users\homura\Documents\Git\HomuraMachine;C:\Users\homura\Documents\Git\HomuraMachine\hmLib</IncludePath>
     <SourcePath>$(USERPROFILE)\Documents\Git\HomuraMachine;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -215,6 +215,11 @@
     <ClInclude Include="..\..\homuraLib_v2\raw_data.hpp" />
     <ClInclude Include="..\..\homuraLib_v2\static_buffer_allocator.hpp" />
     <ClInclude Include="..\..\homuraLib_v2\task.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\task\client_interface.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\task\functional_host.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\task\host_interface.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\task\utility.hpp" />
+    <ClInclude Include="..\..\homuraLib_v2\task\watchdog.hpp" />
     <ClInclude Include="..\..\homuraLib_v2\type.hpp" />
     <ClInclude Include="..\..\local_allocator.hpp" />
     <ClInclude Include="..\..\XC32_config.hpp" />
