--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "hmLib"]
 	path = hmLib
-	url = https://github.com/hmito/hmLib.git
+url=https://github.com/HomuraVehicle/hmLib.git
 [submodule "XCBase"]
 	path = XCBase
 	url = https://github.com/HomuraVehicle/XCBase.git
