--- a/HomuraMachine/Mihara/Mihara.vcxproj
+++ b/HomuraMachine/Mihara/Mihara.vcxproj
@@ -40,8 +40,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(USERPROFILE)\Documents\Projects\HomuraMachine;$(USERPROFILE)\Documents\Projects\HomuraMachine\hmLib;$(IncludePath);C:\Users\homura\Documents\Git\HomuraMachine;C:\Users\homura\Documents\Git\HomuraMachine\hmLib</IncludePath>
-    <SourcePath>$(USERPROFILE)\Documents\Git\HomuraMachine;C:\Users\hmIto\Documents\Projects\HomuraMachine\hmLib;$(SourcePath)</SourcePath>
+    <IncludePath>$(USERPROFILE)\Documents\GIt\HomuraMachine;$(USERPROFILE)\Documents\Git\HomuraMachine\hmLib;$(IncludePath);C:\Users\homura\Documents\Git\HomuraMachine;C:\Users\homura\Documents\Git\HomuraMachine\hmLib</IncludePath>
+    <SourcePath>$(USERPROFILE)\Documents\Git\HomuraMachine;$(USERPROFILE)\Documents\Git\HomuraMachine\hmLib;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(USERPROFILE)\Documents\Git\HomuraMachine;$(USERPROFILE)\Documents\Git\HomuraMachine\hmLib;$(IncludePath);C:\Users\homura\Documents\Git\HomuraMachine;C:\Users\homura\Documents\Git\HomuraMachine\hmLib</IncludePath>
